<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:id="@+id/location_radiogroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/current_location_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_location_radiobutton_text"
                    android:checked="true"
                    android:enabled="true"
                    android:onClick="onCurrentLocationRadioButtonCLick" />

                <RadioButton
                    android:id="@+id/custom_location_radiobutton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_location_radiobutton_text"
                    android:enabled="true"
                    android:checked="false"
                    android:onClick="onCustomLocationRadioButtonCLick" />

            </RadioGroup>

            <EditText
                android:id="@+id/custom_location_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custom_location_default_text"
                android:inputType="text"
                android:enabled="false"
                android:visibility="invisible" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_info_button_text"
            android:id="@+id/getInfoButton"
            android:onClick="onGetInfoButtonClick" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/sunriseLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunrise_label"
                android:id="@+id/sunriseLabelTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sunriseDisplayTextView" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:id="@+id/sunsetLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunset_label"
                android:id="@+id/sunsetLabelTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sunsetDisplayTextView" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
